--- a/saie/web-app/reports/alumno/reporteralumno.jrxml
+++ b/saie/web-app/reports/alumno/reporteralumno.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="carrerasreporte" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.2100000000000006"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="437"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Andrea\\Documents\\workspace-sts-2.3.3.M2\\saie\\web-app\\reports\\carrera\\"]]></defaultValueExpression>
 	</parameter>
@@ -62,15 +62,17 @@
 	<field name="localidadGarante.nombre" class="java.lang.String"/>
 	<field name="localidadGarante.provincia.nombre" class="java.lang.String"/>
 	<field name="localidadGarante.provincia.pais.nombre" class="java.lang.String"/>
+	<field name="estadoAcademico.name" class="java.lang.String"/>
+	<field name="situacionAdministrativa.descripcion" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="69" splitType="Stretch">
+		<band height="93" splitType="Stretch">
 			<staticText>
-				<reportElement x="185" y="31" width="190" height="20"/>
+				<reportElement x="366" y="60" width="177" height="31"/>
 				<textElement textAlignment="Center">
-					<font fontName="Arial" size="14" isBold="true"/>
+					<font fontName="Arial" size="18" isBold="true" isUnderline="false"/>
 				</textElement>
 				<text><![CDATA[Ficha Personal]]></text>
 			</staticText>
@@ -88,10 +90,27 @@
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{direccioninstitucion}.concat(' - ').concat($P{telefonoinstitucion})]]></textFieldExpression>
 			</textField>
+			<rectangle>
+				<reportElement x="11" y="0" width="90" height="91" backcolor="#CCCCCC"/>
+			</rectangle>
 			<image>
-				<reportElement x="59" y="6" width="96" height="63"/>
+				<reportElement x="13" y="3" width="84" height="88"/>
 				<imageExpression class="java.io.File"><![CDATA[new File($P{paramsFoto})]]></imageExpression>
 			</image>
+			<textField>
+				<reportElement x="107" y="3" width="262" height="19"/>
+				<textElement>
+					<font size="13" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{apellido}.concat(', ').concat($F{nombre})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="107" y="22" width="262" height="22"/>
+				<textElement>
+					<font size="13" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{tipoDocumento.name}.concat($F{numeroDocumento})]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<detail>
@@ -107,7 +126,7 @@
 				<textElement>
 					<font size="9"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{tipoDocumento.name}.concat(' ').concat($F{numeroDocumento})]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{tipoDocumento.name}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="66" y="29" width="159" height="12"/>
@@ -152,28 +171,28 @@
 				<text><![CDATA[Fecha Nacimiento:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="309" y="26" width="39" height="12"/>
+				<reportElement x="309" y="29" width="39" height="12"/>
 				<textElement>
 					<font fontName="Arial" size="9" isBold="true" isPdfEmbedded="false"/>
 				</textElement>
 				<text><![CDATA[Sexo:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="309" y="41" width="114" height="12"/>
+				<reportElement x="309" y="42" width="114" height="12"/>
 				<textElement>
 					<font fontName="Arial" size="9" isBold="true" isPdfEmbedded="false"/>
 				</textElement>
 				<text><![CDATA[Número de Documento:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="336" y="26" width="100" height="12"/>
+				<reportElement x="336" y="29" width="100" height="12"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{sexo.name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="419" y="40" width="106" height="12"/>
+				<reportElement x="419" y="41" width="106" height="12"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
@@ -218,7 +237,7 @@
 				<text><![CDATA[Localidad:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="357" y="82" width="149" height="12"/>
+				<reportElement x="357" y="83" width="149" height="12"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
@@ -910,34 +929,68 @@
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[($F{localidadGarante.provincia.pais.nombre}==null?"":$F{localidadGarante.provincia.pais.nombre})]]></textFieldExpression>
 			</textField>
+			<rectangle radius="10">
+				<reportElement x="3" y="525" width="550" height="42"/>
+			</rectangle>
+			<staticText>
+				<reportElement mode="Opaque" x="31" y="521" width="60" height="12"/>
+				<textElement>
+					<font fontName="Arial" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[  Otros Datos  ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="24" y="533" width="105" height="12"/>
+				<textElement>
+					<font fontName="Arial" size="9" isBold="true" isPdfEmbedded="false"/>
+				</textElement>
+				<text><![CDATA[Situación Académica:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="24" y="545" width="112" height="12"/>
+				<textElement>
+					<font fontName="Arial" size="9" isBold="true" isPdfEmbedded="false"/>
+				</textElement>
+				<text><![CDATA[Situación Administrativa:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="119" y="532" width="180" height="12"/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[($F{estadoAcademico.name}==null?"":$F{estadoAcademico.name})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="134" y="545" width="165" height="12"/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[($F{situacionAdministrativa.descripcion}==null?"":$F{situacionAdministrativa.descripcion})]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="30" splitType="Stretch"/>
+		<band height="8" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="12" splitType="Stretch">
+		<band splitType="Stretch"/>
+	</pageFooter>
+	<summary>
+		<band height="14" splitType="Stretch">
 			<staticText>
-				<reportElement x="248" y="0" width="39" height="11"/>
+				<reportElement x="248" y="2" width="39" height="11"/>
 				<textElement textAlignment="Center">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Página Nº ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="289" y="0" width="100" height="11"/>
+				<reportElement x="289" y="2" width="100" height="11"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-		</band>
-	</pageFooter>
-	<summary>
-		<band height="5" splitType="Stretch">
-			<line>
-				<reportElement x="2" y="0" width="553" height="1"/>
-			</line>
 		</band>
 	</summary>
 </jasperReport>
