--- a/saiephp/views/post/index.phtml
+++ b/saiephp/views/post/index.phtml
@@ -1,5 +1,9 @@
 <h2>Ultimos Posts</h2>
 
+<div class="span-5 colborder">
+    pingo
+</div>
+
 <?php if(isset($this->posts) && count($this->posts)) : ?>
 
 <table>
