--- a/legacysaie/web-app/js/extjs/ux/css/GroupTab.css
+++ b/legacysaie/web-app/js/extjs/ux/css/GroupTab.css
@@ -5,7 +5,7 @@
  * http://www.sencha.com/license
  */
 .x-grouptabs-panel {
-    background-color: #4E78B1;
+    background-color: #b9baa0;
     border: solid 15px #4E78B1;
 }
 .x-tab-panel-left .x-grouptabs-panel-header,
