--- a/legacysaie/web-app/reports/comprobantematricula.jrxml
+++ b/legacysaie/web-app/reports/comprobantematricula.jrxml
@@ -2,12 +2,59 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="comprobantematricula" language="groovy" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="21"/>
+	<property name="ireport.y" value="240"/>
+	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
+		<defaultValueExpression><![CDATA["D:\\DOM\\Grails\\Grails 2.0 Samples\\legacysaie\\web-app\\reports\\"]]></defaultValueExpression>
+	</parameter>
+	<field name="id" class="java.lang.Integer"/>
+	<field name="matricula.carrera.denominacion" class="java.lang.String"/>
+	<field name="matricula.alumno.apellido" class="java.lang.String"/>
+	<field name="matricula.alumno.nombre" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<detail>
 		<band height="802" splitType="Stretch">
+			<rectangle>
+				<reportElement x="6" y="726" width="566" height="65"/>
+			</rectangle>
+			<rectangle>
+				<reportElement x="11" y="462" width="566" height="65"/>
+			</rectangle>
+			<line>
+				<reportElement x="441" y="768" width="100" height="1"/>
+				<graphicElement>
+					<pen lineStyle="Dashed"/>
+				</graphicElement>
+			</line>
+			<staticText>
+				<reportElement x="11" y="759" width="544" height="14"/>
+				<textElement>
+					<font fontName="Arial" size="11" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[RECIBI CONFORME COPIA DE REGLAMENTO INTERNO DE ALUMNOS]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="440" y="771" width="100" height="20"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<text><![CDATA[Firma del Solicitante]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="11" y="745" width="544" height="14"/>
+				<textElement>
+					<font fontName="Arial" size="9"/>
+				</textElement>
+				<text><![CDATA[Caso contrario esta información será tomada como válida para el cobro de aranceles]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="11" y="731" width="544" height="14"/>
+				<textElement>
+					<font fontName="Arial" size="9"/>
+				</textElement>
+				<text><![CDATA[Para modificación de la presente solicitud deberá comunicarse con la preseptoría antes del 31 de marzo del corriente año.]]></text>
+			</staticText>
 			<line>
 				<reportElement x="1" y="268" width="594" height="1"/>
 				<graphicElement>
@@ -22,28 +69,28 @@
 			</line>
 			<image>
 				<reportElement x="1" y="0" width="133" height="29"/>
-				<imageExpression class="java.lang.String"><![CDATA["D:\\DOM\\Grails\\Grails 2.0 Samples\\legacysaie\\web-app\\reports\\images\\imagecomprobante.png"]]></imageExpression>
+				<imageExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR}+"/images/","imagecomprobante.png")]]></imageExpression>
 			</image>
 			<image>
 				<reportElement x="1" y="269" width="133" height="29"/>
-				<imageExpression class="java.lang.String"><![CDATA["D:\\DOM\\Grails\\Grails 2.0 Samples\\legacysaie\\web-app\\reports\\images\\imagecomprobante.png"]]></imageExpression>
+				<imageExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR}+"/images/","imagecomprobante.png")]]></imageExpression>
 			</image>
 			<image>
 				<reportElement x="1" y="536" width="133" height="29"/>
-				<imageExpression class="java.lang.String"><![CDATA["D:\\DOM\\Grails\\Grails 2.0 Samples\\legacysaie\\web-app\\reports\\images\\imagecomprobante.png"]]></imageExpression>
+				<imageExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR}+"/images/","imagecomprobante.png")]]></imageExpression>
 			</image>
 			<line>
 				<reportElement x="11" y="29" width="100" height="1"/>
 			</line>
 			<staticText>
-				<reportElement x="22" y="30" width="89" height="15"/>
+				<reportElement x="22" y="30" width="89" height="16"/>
 				<textElement>
 					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Quien Suscribe:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="22" y="45" width="298" height="15"/>
+				<reportElement x="22" y="45" width="298" height="16"/>
 				<textElement>
 					<font fontName="Arial" isBold="false"/>
 				</textElement>
@@ -89,32 +136,169 @@
 			<rectangle>
 				<reportElement x="11" y="195" width="566" height="65"/>
 			</rectangle>
+			<elementGroup>
+				<staticText>
+					<reportElement x="445" y="240" width="100" height="20"/>
+					<textElement>
+						<font fontName="Arial"/>
+					</textElement>
+					<text><![CDATA[Firma del Solicitante]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="16" y="200" width="544" height="14"/>
+					<textElement>
+						<font fontName="Arial" size="9"/>
+					</textElement>
+					<text><![CDATA[Para modificación de la presente solicitud deberá comunicarse con la preseptoría antes del 31 de marzo del corriente año.]]></text>
+				</staticText>
+				<line>
+					<reportElement x="446" y="237" width="100" height="1"/>
+					<graphicElement>
+						<pen lineStyle="Dashed"/>
+					</graphicElement>
+				</line>
+				<staticText>
+					<reportElement x="16" y="214" width="544" height="14"/>
+					<textElement>
+						<font fontName="Arial" size="9"/>
+					</textElement>
+					<text><![CDATA[Caso contrario esta información será tomada como válida para el cobro de aranceles]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="16" y="228" width="544" height="14"/>
+					<textElement>
+						<font fontName="Arial" size="11" isItalic="true"/>
+					</textElement>
+					<text><![CDATA[RECIBI CONFORME COPIA DE REGLAMENTO INTERNO DE ALUMNOS]]></text>
+				</staticText>
+			</elementGroup>
+			<line>
+				<reportElement x="446" y="504" width="100" height="1"/>
+				<graphicElement>
+					<pen lineStyle="Dashed"/>
+				</graphicElement>
+			</line>
 			<staticText>
-				<reportElement x="16" y="200" width="544" height="14"/>
+				<reportElement x="16" y="481" width="544" height="14"/>
 				<textElement>
-					<font size="9"/>
-				</textElement>
-				<text><![CDATA[Para modificación de la presente solicitud deberá comunicarse con la preseptoría antes del 31 de marzo del corriente año.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="16" y="214" width="544" height="14"/>
-				<textElement>
-					<font size="9"/>
+					<font fontName="Arial" size="9"/>
 				</textElement>
 				<text><![CDATA[Caso contrario esta información será tomada como válida para el cobro de aranceles]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="16" y="228" width="544" height="14"/>
+				<reportElement x="445" y="507" width="100" height="20"/>
 				<textElement>
-					<font size="9"/>
+					<font fontName="Arial"/>
+				</textElement>
+				<text><![CDATA[Firma del Solicitante]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="16" y="495" width="544" height="14"/>
+				<textElement>
+					<font fontName="Arial" size="11" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[RECIBI CONFORME COPIA DE REGLAMENTO INTERNO DE ALUMNOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="445" y="240" width="100" height="20"/>
-				<textElement/>
-				<text><![CDATA[Firma del Solicitante]]></text>
+				<reportElement x="16" y="467" width="544" height="14"/>
+				<textElement>
+					<font fontName="Arial" size="9"/>
+				</textElement>
+				<text><![CDATA[Para modificación de la presente solicitud deberá comunicarse con la preseptoría antes del 31 de marzo del corriente año.]]></text>
 			</staticText>
+			<subreport>
+				<reportElement x="16" y="66" width="236" height="117"/>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"comprobantematricfula_detalle1.jasper")]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement x="341" y="66" width="236" height="117"/>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression class="java.io.File"><![CDATA[$P{SUBREPORT_DIR} + "comprobantematricula_detalle2.jasper"]]></subreportExpression>
+			</subreport>
+			<textField>
+				<reportElement x="117" y="30" width="100" height="16"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.alumno.apellido}]]></textFieldExpression>
+			</textField>
+			<subreport>
+				<reportElement x="16" y="335" width="236" height="117"/>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression class="java.io.File"><![CDATA[$P{SUBREPORT_DIR} + "comprobantematricfula_detalle1.jasper"]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement x="341" y="335" width="236" height="117"/>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression class="java.io.File"><![CDATA[$P{SUBREPORT_DIR} + "comprobantematricula_detalle2.jasper"]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement x="16" y="603" width="236" height="117"/>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression class="java.io.File"><![CDATA[$P{SUBREPORT_DIR} + "comprobantematricfula_detalle1.jasper"]]></subreportExpression>
+			</subreport>
+			<subreport>
+				<reportElement x="336" y="603" width="236" height="117"/>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression class="java.io.File"><![CDATA[$P{SUBREPORT_DIR} + "comprobantematricula_detalle2.jasper"]]></subreportExpression>
+			</subreport>
+			<textField>
+				<reportElement x="325" y="45" width="100" height="16"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.carrera.denominacion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="325" y="312" width="100" height="16"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.carrera.denominacion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="117" y="297" width="100" height="16"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.alumno.apellido}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="320" y="579" width="100" height="16"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.carrera.denominacion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="112" y="564" width="100" height="16"/>
+				<textElement>
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{matricula.alumno.apellido}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="440" y="10" width="132" height="20"/>
+				<textElement textAlignment="Right">
+					<font fontName="Arial" size="11" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[Nº: ($F{id}+100000000).toString().substring(1,9)]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="440" y="269" width="132" height="20"/>
+				<textElement textAlignment="Right">
+					<font fontName="Arial" size="11" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[Nº: ($F{id}+100000000).toString().substring(1,9)]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="440" y="536" width="132" height="20"/>
+				<textElement textAlignment="Right">
+					<font fontName="Arial" size="11" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.Integer"><![CDATA[Nº: ($F{id}+100000000).toString().substring(1,9)]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 </jasperReport>
